Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Mar-2013 Jean-Marie Simonet
 # [#30333] *TAGS: Notice when entering 2 tags in a tags menu item. Thanks Roberto
 # [#30328] AJAX field improvements/fixes. Thanks Roberto

19-Mar-2013 Jean-Marie Simonet
 $ Missing strings in com_tags frontend

18-Mar-2013 Jean-Marie Simonet
 # [#26860] A Contact name *must not* be unique. Thanks Christophe and Janich
 # [#28874] Registration activation email links. Thanks Marco
 $ Updating Installation ini files: af-ZA, eo-XX, es-ES, pl-PL, uk-UA

17-Mar-2013 Michael Babker
 ^ [#30262] Add PostgreSQL schema for tags, sync with MySQL, update script additions
 + [#30251] Add single tag feed view.  Thanks Elin
 # [#30256] Error in field mapping for contact.  Thanks Elin
 #+ [#29677] robots.txt in updates. Thanks Mark
 ^ [#30311] Move code from tag model to tags class.  Thanks Elin

17-Mar-2013 Jean-Marie Simonet
 # [#30121] Save as copy does not work in com_weblinks, com_contacts, com_newsfeeds. Thanks Lemings
 # [#30267] *Modifying constant in logged in module (back-end)
 # [#30190] allow string-based input fields to use the "multiple" attribute. Thanks Randy.
 # [#30305] Correcting the similar tags module. Thanks Elin
 # [#30264] AJAX field for tagging. Thanks Roberto
 # [#29810] File deletion issue. Thanks Elin
 # [#28803] Bug in com_contact. Thanks Ben
 # [#28171] Com_content category view incorrect ordering of "featured" articles. Thanks Christophe Demko

16-Mar-2013 Michael Babker
 # [#30259] Added (min) height to table cells with context.  Thanks Peter
 ^ [#30258] Added purge to find/update methods. Removed purge buttons.  Thanks Peter
 ^ [#29295] Show Correct Meta Titles in Joomla Admin for better usability.  Thanks Parth
 + [#28924] Add SQL Server subclass for FinderIndexer
 ^ [#30083] Update PHPMailer to 5.2.3